<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".ui.NewContatctActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contact Details"
        android:textSize="40sp"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/img_contact"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:src="@drawable/default_avatar"
        android:layout_marginVertical="10dp"/>

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:enabled="true"
        android:gravity="center"/>

    <EditText
        android:id="@+id/edit_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/Address"
        android:enabled="true"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:id="@+id/edit_Email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:layout_marginTop="10dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:enabled="true"
        android:gravity="center"/>

        <ImageView
            android:id="@+id/icon_eMail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/baseline_attach_email_24"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/edit_Phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:layout_marginTop="10dp"
        android:hint="@string/Phone"
        android:inputType="number"
        android:enabled="true"
        android:gravity="center"/>

        <ImageView
            android:id="@+id/icon_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/baseline_call_24"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_edit_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="Edit"
            android:textSize="19sp"/>

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="Back"
            android:backgroundTint="@color/RedB"
            android:textSize="19sp"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textSize="19sp"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:backgroundTint="@color/RedB"
            android:textSize="19sp"/>

        <Button
            android:id="@+id/btn_Delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:text="@string/delete"
            android:backgroundTint="@color/Red"
            android:textSize="19sp"/>
    </LinearLayout>

</LinearLayout>